Integration tests now run from command line. Add file headers throughout. General code cleanup.