@@ -1,3 +1,22 @@
+/*----------------------------------------------------------------------------------------------------------------------
+ * Evidence Engine: A system for managing evidence on arbitrary scientific topics.
+ * Comprises an SQL database, GraphQL public API, Java app server, Java and web clients.
+ * Copyright © 2024 Adrian Price. All rights reserved.
+ *
+ * This file is part of Evidence Engine.
+ *
+ * Evidence Engine is free software: you can redistribute it and/or modify it under the terms of the
+ * GNU Affero General Public License as published by the Free Software Foundation, either version 3 of the License,
+ * or (at your option) any later version.
+ *
+ * Evidence Engine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+ * without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU Affero General Public License for more details.
+ *
+ * You should have received a copy of the GNU Affero General Public License along with Evidence Engine.
+ * If not, see <https://www.gnu.org/licenses/>. 
+ *--------------------------------------------------------------------------------------------------------------------*/
+
 plugins {
 	id 'java'
 	id 'war'
@@ -18,6 +37,7 @@ version = '0.0.1-SNAPSHOT'
 // }
 
 dependencies {
+	implementation project(':common')
 	implementation 'org.springframework.boot:spring-boot-starter-graphql'
 //	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
@@ -40,11 +60,12 @@ dependencies {
 //  implementation 'io.reactivex.rxjava2:rxjava:2.2.19' // used in graphql-java-generator example
 //	implementation 'commons-logging:commons-logging'
 	implementation 'org.apache.commons:commons-collections4:4.5.0-M2'
-	implementation project(':common')
+	implementation 'org.apache.commons:commons-lang3:3.17.0'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-	runtimeOnly 'com.h2database:h2:2.3.232'
 	runtimeOnly 'com.graphql-java-kickstart:graphiql-spring-boot-starter:6.0.1' // added per graphql-java-generator example
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+	// H2 is only required for running in integration test target server mode
+	runtimeOnly 'com.h2database:h2:2.3.232'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-webtestclient'
@@ -60,12 +81,12 @@ java {
 	}
 	sourceCompatibility = JavaVersion.VERSION_21
 }
-// tasks.withType(JavaCompile) {
-//     options.compilerArgs += '--enable-preview'
-// }
-// tasks.withType(Test) {
-//     jvmArgs += "--enable-preview"
-// }
+
+compileJava {
+    options.compilerArgs.add("-g")
+    options.compilerArgs.add("-parameters")
+}
+
 tasks.named('test') {
 	outputs.dir snippetsDir
 	useJUnitPlatform()
@@ -76,130 +97,6 @@ tasks.named('asciidoctor') {
 	dependsOn test
 }
 
-// tasks.named('compileJava') {
-// 	dependsOn('generateClientCode')
-// }
-
-// tasks.named('processTestResources') {
-// 	dependsOn('generateClientCode')
-// }
-
-// GraphQL Java Generator configuration
-// Because we have modified the generated code, we now generate it only
-// for reference/comparison purposes, and we don't put it on the class path.
-// sourceSets.main.java.srcDirs += '/build/generated/sources/graphqlServer'
-// sourceSets.main.resources.srcDirs += '/build/generated/resources/graphqlServer'
-// generateServerCodeConf {
-// //	addRelayConnections = false
-// //	batchMappingDataFetcherReturnType = Flux<V>
-// 	copyRuntimeSources = false // will go away in 2.0
-// 	customScalars = [
-// 		[
-// 			graphQLTypeName: "Country",
-// 			javaType: "java.lang.String",
-// 			graphQLScalarTypeStaticField: "io.github.demonfiddler.ee.common.graphql.CustomScalars.COUNTRY"
-// 		], [
-// 			graphQLTypeName: "Date",
-// 			javaType: "java.time.LocalDate",
-// 			graphQLScalarTypeStaticField: "graphql.scalars.ExtendedScalars.Date"
-// 		], [
-// 			graphQLTypeName: "DateTime",
-// 			javaType: "java.time.OffsetDateTime",
-// 			graphQLScalarTypeStaticField: "graphql.scalars.ExtendedScalars.DateTime"
-// 		], [
-// 			graphQLTypeName: "ISSN",
-// 			javaType: "java.lang.String",
-// 			graphQLScalarTypeStaticField: "io.github.demonfiddler.ee.common.graphql.CustomScalars.ISSN"
-// 		], [
-// 			graphQLTypeName: "Long",
-// 			javaType: "java.lang.Long",
-// 			graphQLScalarTypeStaticField: "graphql.scalars.ExtendedScalars.GraphQLLong"
-// 		], [
-// 			graphQLTypeName: "URI",
-// 			javaType: "java.net.URI",
-// 			graphQLScalarTypeStaticField: "io.github.demonfiddler.ee.common.graphql.CustomScalars.URI"
-// 		], [
-// 			graphQLTypeName: "URL",
-// 			javaType: "java.net.URL",
-// 			graphQLScalarTypeStaticField: "graphql.scalars.ExtendedScalars.Url"
-// 		], [
-// 			graphQLTypeName: "Void",
-// 			javaType: "java.lang.Void",
-// 			graphQLScalarTypeStaticField: "io.github.demonfiddler.ee.common.graphql.CustomScalars.VOID"
-// 		]
-// 	]
-// //	enumPrefix = 
-// //	enumSuffix = 
-// 	generateBatchLoaderEnvironment = true // will go away in 2.0
-// 	generateBatchMappingDataFetchers = true // false
-// 	generateDataFetcherForEveryFieldsWithArguments = true // false
-// //	batchMappingMethodReturnType = ?
-// //	generateDataLoaderForLists = false
-// 	generateJPAAnnotation = true // false
-// //	ignoredSpringMappings =
-// //	inputPrefix =
-// //	inputSuffix = 
-// //	interfacePrefix =
-// //	interfaceSuffix = 
-// 	javaTypeForIDType = 'java.lang.Long' // 'java.util.UUID'
-// //	jsonGraphqlSchemaFilename = src/main/resources/graphql/schema.graphqls
-// //	maxTokens = Integer.MAX_VALUE (=2147483647)
-// 	packageName = 'io.github.demonfiddler.ee.server' // 'com.generated.graphql'
-// //	queryMutationExecutionProtocol = 'http' | 'webSocket'
-// //	scanBasePackages = 'io.github.demonfiddler.ee.server.util, io.github.demonfiddler.ee.server.impl, io.github.demonfiddler.ee.server.jpa'
-// //	scanBasePackages = 'io.github.demonfiddler.ee.server'
-// 	schemaFileFolder = 'src/main/resources/graphql' // default 'src/main/resources'
-// //	schemaFilePattern = '*.graphqls'
-// 	schemaPersonalizationFile = 'src/main/resources/graphql/personalization.json'
-// 	separateUtilityClasses = true // will go away in 2.0
-// //	skipGenerationIfSchemaHasNotChanged = true // deprecated
-// //	sourceEncoding = 'UTF-8'
-// //	springBeanSuffix = ''
-//	targetResourceFolder = './build/generated/resources/graphqlServer'
-//	targetSourceFolder = './build/generated/sources/graphqlServer'
-// //	templates = {} // see com.graphql_java_generator.plugin.CodeTemplate enum
-// //	typePrefix = ''
-// //	typeSuffix = ''
-// //	unionPrefix = ''
-// //	unionSuffix = ''
-// 	useJakartaEE9 = true
-// }
-
-
-// // Netflix DGS code generator configuration. See https://netflix.github.io/dgs/generating-code-from-schema/.
-// generateJava{
-// 	schemaPaths = ["${projectDir}/src/main/resources/graphql"] // List of directories containing schema files
-// 	packageName = 'io.github.demonfiddler.ee.server' // The package name to use to generate sources
-// 	// subPackageNameClient = client
-// 	// subPackageNameDatafetchers = datafetchers
-// 	// subPackageNameTypes = types
-// 	// language = java
-// 	// typeMapping (A Map where each key is a GraphQL type, and the value the FQN of a Java class)
-// 	// generateBoxedTypes = false
-// 	generateClient = true // false
-// 	// generateDataTypes = true
-// 	// generateInterfaces = false
-// 	// generatedSourcesDir = build
-// 	// includeQueries = [...]
-// 	// includeMutations = [...]
-// 	// includeSubscriptions= [...]
-// 	// skipEntityQueries = false
-// 	// shortProjectionNames = false
-// 	// maxProjectionDepth = 10
-// 	// includeEnumImports = (map)
-// 	// includeImports = mapOf(Pair("validator", "com.test.validator")),
-// 	// includeClassImports = mapOf("ValidPerson" to mapOf(Pair("BasicValidation", "com.test.validator.groups")))
-// 	// generateCustomAnnotations = false
-// 	// addGeneratedAnnotation = false
-// 	// disableDatesInGeneratedAnnotation = false
-// }
-
-compileJava {
-    options.compilerArgs.add("-g")
-    options.compilerArgs.add("-parameters")
-}
-//compileJava.dependsOn generateServerCode // added per graphql-java-generator example
-
 repositories {
 	mavenLocal()
 	mavenCentral()
@@ -209,3 +106,70 @@ ext {
 	set('snippetsDir', file("build/generated-snippets"))
 	set('springBootAdminVersion', "3.3.4")
 }
+
+import org.springframework.boot.gradle.tasks.run.BootRun
+tasks.register('bootIntegrationTestServer', BootRun) {
+	dependsOn 'classes'
+	group = 'application'
+	description = 'Launch the integration test target server in the foreground'
+    classpath = sourceSets.main.runtimeClasspath
+	main = 'io.github.demonfiddler.ee.server.EvidenceEngineServer'
+	args(['--spring.profiles.active=integration-test'])
+	setIgnoreExitValue(true)
+}
+
+tasks.register('bootIntegrationTestServerBG') {
+	dependsOn 'classes'
+    group = 'application'
+	description = 'Launch the integration test target server in the background'
+    def classpath = project.sourceSets.main.runtimeClasspath.asPath
+    doLast {
+        println 'Launching server...'
+		// For now, use the same Java installation as Gradle
+        String javaHome = System.getProperty('java.home')
+        File javaFile = new File(new File(new File(javaHome), 'bin'), 'java.exe')
+        String javaExe = javaFile.getCanonicalPath()
+		File build = new File(new File('server'), 'build')
+		build.mkdirs()
+        new ProcessBuilder()
+            .command(javaExe, '-cp', classpath, 'io.github.demonfiddler.ee.server.EvidenceEngineServer',
+				'--spring.profiles.active=integration-test')
+            .redirectOutput(new File(build, 'server.log'))
+            .redirectError(new File(build, 'server-error.log'))
+            .start()
+        println 'bootIntegrationTestServerInBackground task finished'
+    }
+    finalizedBy 'waitForIntegrationTestServer'
+}
+
+tasks.register('waitForIntegrationTestServer', Exec) {
+	group = 'application'
+	description = 'Wait for the integration test server to be fully operational'
+	// TODO: test STDOUT for '{"status":"UP"}'
+	commandLine 'curl', '--retry', '10', '--retry-delay', '5', '--retry-connrefused', 'http://localhost:8080/actuator/health'
+	standardOutput = new ByteArrayOutputStream()
+	ext.output = {
+		return standardOutput.toString()
+	}
+	doFirst {
+		println 'Waiting for test server...'
+	}
+	doLast {
+		println 'Test server initialised'
+	}
+}
+
+tasks.register('terminateIntegrationTestServer', Exec) {
+	group = 'application'
+	description = 'Terminate the integration test server'
+	// TODO: test STDOUT for '{"message":"Shutting down, bye..."}'
+	commandLine 'curl', '-X', 'POST', 'http://localhost:8080/actuator/shutdown'
+	standardOutput = new ByteArrayOutputStream()
+	ext.output = {
+		return standardOutput.toString()
+	}
+	setIgnoreExitValue(true)
+}
+
+// Uncomment to enable GraphQL server code generation (NOTE: the generated code has been heavily modified).
+//evaluate(new File("codegen.gradle"))
